service.yml
apiVersion: v1
kind: Service
metadata:
  name: rappi-test-service
spec:
  selector:
    app: rappitest
  ports:
  - name: rappi-test-port
    port: 3000
    protocol: TCP
    targetPort: 3000
  type: ClusterIP
