ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/test"
          backend:
            service:
              name: rappi-test-service
              port:
                number: 3000
        - pathType: Prefix
          path: "/rappi/obtenerUsuario"
          backend:
            service:
              name: rappi-test-service
              port:
                number: 3000
        - pathType: Prefix
          path: "/rappi/borrarUsuario"
          backend:
            service:
              name: rappi-test-service
              port:
                number: 3000
        - pathType: Prefix
          path: "/rappi/agregarUsuario"
          backend:
            service:
              name: rappi-test-service
              port:
                number: 3000
        - pathType: Prefix
          path: "/rappi/modificarUsuario"
          backend:
            service:
              name: rappi-test-service
              port:
                number: 3000
